Closed Bug 1491868 Opened 7 years ago Closed 7 years ago

[Linux] Firefox Crashes while updating to the latest version in VRListenerThread

Categories

(Core :: WebVR, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox-esr60 --- unaffected
firefox62 --- unaffected
firefox63 --- wontfix
firefox64 --- fixed

People

(Reporter: emilghitta, Assigned: kip)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

[Affected platforms]: Ubuntu 18.04. [Steps to reproduce]: 1. Launch an old Firefox Nightly (ex: One from 2018-09-13). 2. Update Firefox. [Expected result]: Firefox launches successfully. [Actual result]: Firefox crashes. [Note]: I didn’t managed to reproduce this issue on Windows or macOS. Updated from 64.0a1 (2018-09-13) to latest Nightly Crash Id:83707d06-80e4-4e3f-b48e-6a1190180917 Updated from 63.0b3 to latest Beta Crash Id:f7a9e251-93aa-453b-a115-fdd530180917 Updated from 58.0.2 to 62.0 (not affected) Core dump: https://drive.google.com/open?id=1XPafpjBJs-2OIylsIQhecxloEPjS6Sl-
Is there a crash report in about:crashes?
Flags: needinfo?(emil.ghitta)
> Updated from 64.0a1 (2018-09-13) to latest Nightly > Crash Id:83707d06-80e4-4e3f-b48e-6a1190180917 > > Updated from 63.0b3 to latest Beta > Crash Id:f7a9e251-93aa-453b-a115-fdd530180917 bp-83707d06-80e4-4e3f-b48e-6a1190180917 bp-f7a9e251-93aa-453b-a115-fdd530180917
Crash Signature: f7a9e251-93aa-453b-a115-fdd530180917 83707d06-80e4-4e3f-b48e-6a1190180917 → Crash in shutdownhang | libpthread-2.27.so@0xd9f3
Ups, my bad. Thanks Alice!
Flags: needinfo?(emil.ghitta)
Crash Signature: Crash in shutdownhang | libpthread-2.27.so@0xd9f3 → [@ shutdownhang | libpthread-2.27.so@0xd9f3]
Component: General → Application Update
Product: Core → Toolkit
I'm noticing that this crash is mostly affecting Thunderbird, but there's 70-ish for Firefox. Should we hand this over? Or is there something for us to look into? Thanks!
Flags: needinfo?(robert.strong.bugs)
(In reply to Alice0775 White from comment #2) > bp-f7a9e251-93aa-453b-a115-fdd530180917 This crash seems VR-related. Maybe Daosheng has thoughts on the thread timeout (?) situation?
Flags: needinfo?(dmu)
(In reply to Selena Deckelmann :selenamarie :selena use ni? pronoun: she from comment #4) > I'm noticing that this crash is mostly affecting Thunderbird, but there's > 70-ish for Firefox. Should we hand this over? Or is there something for us > to look into? Thanks! It doesn't appear that there is anything for me to look into... there is nothing in the crash reports that indicate that this involves app update code and it appears to be a shutdown hang.
Flags: needinfo?(robert.strong.bugs)
We recently refactor our VR thread model at Bug 1473397. It should be different than before. I will continue to seeing if anything needs to be changed as well once I am back on Fri.
I have given a fix for this issue. Besides, we are considering to remove VRListenerThread in FF64 for Bug 1494556. We will no longer see VRListenerThread be related with this shutdown hang issue.
Flags: needinfo?(dmu)
See Also: → 1494556
Assignee: nobody → dmu
Component: Application Update → WebVR
Product: Toolkit → Core
Summary: [Linux] Firefox Crashes while updating to the latest version → [Linux] Firefox Crashes while updating to the latest version in VRListenerThread
Comment on attachment 9013008 [details] Bug 1491868 - Avoid shutdown hang by checking if VRListenerThread is null. :kip (Kearwood Gilbert) has approved the revision.
Attachment #9013008 - Flags: review+
Pushed by cbrindusan@mozilla.com: https://hg.mozilla.org/mozilla-central/rev/a2e5b2b30bfa Avoid shutdown hang by checking if VRListenerThread is null. r=kip
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Hi Daosheng, Unfortunately, Firefox still keeps on crashing after updating Firefox 64.0a1 bp-cc86dffb-db39-49d6-b156-30e940181005
Flags: needinfo?(dmu)
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: mozilla64 → ---
That would be other issues because we have removed VRListenerThread at Bug 1494556.
Flags: needinfo?(dmu)
At Bug 1494556, we have removed VRListenerThread. If it's still happened, that would be affected by other issues.
Status: REOPENED → RESOLVED
Closed: 7 years ago7 years ago
Resolution: --- → FIXED
Assignee: dmu → kgilbert
Target Milestone: --- → mozilla64
Bug 1494556 isn't going to be backported to 63.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: