Bug 1491868 - Avoid shutdown hang by checking if VRListenerThread is null. r=kip

MozReview-Commit-ID: HbWlMUQGXD8

Differential Revision: https://phabricator.services.mozilla.com/D7220